2006-04-12  Albert Chu <chu11@llnl.gov>

	* ipmipower/: Add work to support both interpretations of the
	"cipher suite id privilege level".
	
2006-04-11  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-rmcpplus.c (fill_rmcpplus_rakp_message_1):
	Fix compliance bug.

	* libfreeipmi/include/freeipmi/ipmi-messaging-support-cmds.h,
	libfreeipmi/src/ipmi-messaging-support-cmds.c
	(fill_cmd_set_user_password_v20),
	libfreeipmi/src/udm/ipmi-messaging-support-cmds-udm.c: Support
	password size parameter.

	* fish/: Support 'Password20' bmc-config option.

	* ipmipower/: Remove --cipher-suite-records-all-oem option.
	Migrate workaround into --intel-2-0-session option.  Implement
	additional username padding workarounds for Intel.

	* libfreeipmi/src/udm/ipmi-messaging-support-cmds-udm.c
	(ipmi_cmd_get_session_challenge, ipmi_cmd_activate_session,
	ipmi_cmd_set_session_privilege_level): Fix errno codes.

	* ipmipower/: Version auto picks ipmi 1.5 over ipmi 2.0.

	* common/src/Makefile.am,
	common/src/ipmi-sdr-repository-cache-api.h,
	common/src/ipmi-sdr-repository-cache-api.c: Remove sdr repository
	cache api.

	* fish/src/bmc-conf2.c (get_k_g, get_k_r): Fix return code bug.

2006-04-09  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/, fish/, common/: Split record_count of sdr info
	into ls byte and ms byte like IPMI spec.
	
2006-04-07  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-sdr-repository-cmds.c: Adjust get sdr max
	record data length.

	* libfreeipmi/src/ipmi-sdr-record-types.c,
	libfreeipmi/include/freeipmi/ipmi-sdr-record-types.h,
	common/src/ipmi-sensor-api.c,
	common/src/ipmi-sdr-repository-cache-api.c: Fix up template names.
	
2006-04-06  Albert Chu <chu11@llnl.gov>

	* bmc-watchdog/src/bmc-watchdog.c (_init_ipmi): Check kcs context
	errnum rather than errno.

	* libfreeipmi/src/ipmi-udm.c,
	libfreeipmi/include/freeipmi/ipmi-udm.h: Remove template pointers.
	
	* libfreeipmi/src/ipmi-sol-cmds.c,