@@ -2,6 +2,8 @@
 
 	* ipmipower/: Add work to support both interpretations of the
 	"cipher suite id privilege level".
+
+	* ipmipower/: Add one more intel IPMI 2.0 workaround.
 	
 2006-04-11  Albert Chu <chu11@llnl.gov>
 
